// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination test > Expect generate 10 page items 1`] = `
<div
  className="pagination"
>
  <ul
    className="page"
  >
    <Flex
      flexDirection="row"
      justifyContent="center"
      theme={
        Object {
          "breakpoints": Array [
            "40em",
            "52em",
            "64em",
          ],
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            64,
            96,
            128,
          ],
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
            256,
            512,
          ],
        }
      }
    >
      <styled.li
        className=""
        isCurrentPage={true}
        key="0"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          1
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="1"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          2
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="2"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          3
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="3"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          4
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="4"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          5
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="5"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          6
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="6"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          7
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="7"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          8
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="8"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          9
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="9"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          10
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="10"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          11
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="11"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          12
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="12"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          13
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="13"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          14
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="14"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          15
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="15"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          16
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="16"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          17
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="17"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          18
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="18"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          19
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="19"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          20
        </a>
      </styled.li>
    </Flex>
  </ul>
</div>
`;

exports[`Pagination test > Expect generate 10 page items 2`] = `""`;

exports[`Pagination test > Expect generate 10 page items 3`] = `
<div
  className="pagination"
>
  <ul
    className="page"
  >
    <Flex
      flexDirection="row"
      justifyContent="center"
      theme={
        Object {
          "breakpoints": Array [
            "40em",
            "52em",
            "64em",
          ],
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            64,
            96,
            128,
          ],
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
            256,
            512,
          ],
        }
      }
    >
      <styled.li
        className=""
        isCurrentPage={true}
        key="0"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          1
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="1"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          2
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="2"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          3
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="3"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          4
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="4"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          5
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="5"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          6
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="6"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          7
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="7"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          8
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="8"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          9
        </a>
      </styled.li>
      <styled.li
        className=""
        isCurrentPage={false}
        key="9"
        onClick={[Function]}
      >
        <a
          className="page-link"
          href="#"
        >
          10
        </a>
      </styled.li>
    </Flex>
  </ul>
</div>
`;
